<resources>
    <string name="app_name">Bangunan Bersejarah</string>
    <string name="action_settings">Settings</string>

    <string name="home">Beranda</string>
    <string name="prov_banten">Provinsi Banten</string>
    <string name="prov_jakarta">Provinsi DKI Jakarta</string>
    <string name="prov_jawabarat">Provinsi Jawa Barat</string>
    <string name="prov_jawatengah">Provinsi Jawa Tengah</string>
    <string name="prov_jawatimur">Provinsi Jawa Timur</string>
    <string name="prov_yogyakarta">Provinsi DIY Yogyakarta</string>

    <string name="favorit">Bangunan Favorit</string>
    <string name="quiz">Quis Bangunan Bersejarah</string>
    <string name="tentang">Tentang</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
